[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/PortaH.gd" type="Script" id=1]
[ext_resource path="res://Sprites/scenery/Portas.png" type="Texture" id=2]
[ext_resource path="res://Sounds/effects/DOOR.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 3, 12 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 4, 11.75 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 9, 12 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 12.5, 27.5 )

[node name="PortaH" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="ColLeft" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -13, 4 )
shape = SubResource( 17 )

[node name="ColRight" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 3.75 )
shape = SubResource( 18 )

[node name="ColDoor" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 4 )
shape = SubResource( 19 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 9
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 20 )

[node name="somPorta" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -9.0
max_distance = 1000.0
attenuation = 2.92817
bus = "Effects"
